--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529527829
+    created: 1529527899
     eco: null
-    guid: f85c6105-ea4e-423d-bfbc-37bde229a564
+    guid: 567a95f8-b21f-4fea-997c-a318361a78c3
     state: running
