--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529527829
+    created: 1529527899
     eco: null
-    guid: 4fd94df4-305b-4452-8990-b746ea1c4444
+    guid: 0acb7187-6ee8-443f-8a13-21c33ca4e9fb
     state: running
