--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529528219
+    eco: null
+    guid: e2c8cdf5-2e03-4d2b-8741-a49bb03590c1
+    state: running
+-   action_name: save
+    args: null
+    created: 1529528219
+    eco: null
+    guid: ba905255-9860-4571-8cac-d186b9869e5a
+    state: new
