--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529528789
+    eco: null
+    guid: a2184c91-802f-410c-ae14-011507bcd2a7
+    state: running
+-   action_name: save
+    args: null
+    created: 1529528789
+    eco: null
+    guid: 2ea5a5f3-ec38-4a2c-a707-12d6fff22209
+    state: new
