--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529529299
+    created: 1529529359
     eco: null
-    guid: c66d1341-6ce6-496f-a146-40a3fe168a3d
+    guid: 99802ce0-b023-4293-afa7-3ed83d9e07ef
     state: running
+-   action_name: save
+    args: null
+    created: 1529529359
+    eco: null
+    guid: acc543b7-8be1-4b54-963a-b2eaa25c69b8
+    state: new
