--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529530379
+    eco: null
+    guid: ee4d0912-e5c1-4ebd-8d08-225092cf00c0
+    state: running
