--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529530379
+    created: 1529530439
     eco: null
-    guid: ee4d0912-e5c1-4ebd-8d08-225092cf00c0
+    guid: 77f10f2f-b58f-45b9-80ef-2f1c20bc286d
     state: running
+-   action_name: save
+    args: null
+    created: 1529530439
+    eco: null
+    guid: b4620588-8a84-4e3a-96c8-1cc5fb57f13d
+    state: new
