--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529530889
+    eco: null
+    guid: e7299dfb-935e-4547-8afb-cd99b0966f4e
+    state: running
