--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529530889
+    created: 1529530949
     eco: null
-    guid: e7299dfb-935e-4547-8afb-cd99b0966f4e
+    guid: 373c6481-aeca-4f53-b524-af2f038f9112
     state: running
