--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: save
+-   action_name: _monitor
     args: null
-    created: 1529530889
+    created: 1529530949
     eco: null
-    guid: f58c6dd2-e14d-421a-a58e-946ef3ea8bfb
+    guid: 0869f31e-7be6-457a-acc5-b8794e5a5cbb
     state: running
