--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,6 +1,12 @@
+-   action_name: _monitor
+    args: null
+    created: 1529530949
+    eco: null
+    guid: 75717791-6bdd-4ecb-a00d-912f11d64200
+    state: running
 -   action_name: save
     args: null
-    created: 1529530889
+    created: 1529530949
     eco: null
-    guid: ac377b21-b39d-4c59-9e16-79cca768dcbe
-    state: running
+    guid: 356c5685-bcb0-42cf-9182-0597d244883c
+    state: new
