--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529531519
+    eco: null
+    guid: 63239f6a-bb25-4afa-bc0b-2808d8da0e75
+    state: running
+-   action_name: save
+    args: null
+    created: 1529531519
+    eco: null
+    guid: 9368165a-4c8c-48ee-87ed-0fa775e7db04
+    state: new
