--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529532659
+    eco: null
+    guid: 2b013738-795f-445d-883d-9979a4fe3955
+    state: running
+-   action_name: save
+    args: null
+    created: 1529532659
+    eco: null
+    guid: 0a27a347-9492-4f22-95d1-2af78f15b368
+    state: new
