--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529533109
+    eco: null
+    guid: c281aaee-8ec5-4d56-be41-abae6e068562
+    state: running
+-   action_name: save
+    args: null
+    created: 1529533109
+    eco: null
+    guid: 645ecf0e-8674-4b0d-b075-3d6771f91037
+    state: new
