--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529533169
+    created: 1529533239
     eco: null
-    guid: bf91a027-2e09-44d2-9371-cc330f229a5a
+    guid: 3b74e080-9e84-43fa-8c84-e53aa12e94db
     state: running
