--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,12 @@
+-   action_name: _monitor
+    args: null
+    created: 1529533679
+    eco: null
+    guid: e25a15a5-d4e6-4181-8f41-37695a5eb1ba
+    state: running
 -   action_name: save
     args: null
-    created: 1529533619
+    created: 1529533679
     eco: null
-    guid: 3b1e348f-ef46-4131-b660-90a9aa0b6ec1
-    state: running
+    guid: cd82b631-482d-4322-90c4-12b71881ff3d
+    state: new
