--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529534129
+    created: 1529534189
     eco: null
-    guid: 404ee9b8-7a30-445a-89e9-875dac1e1571
+    guid: fde7bf33-340b-4668-986e-ac6f47dd035e
     state: running
+-   action_name: save
+    args: null
+    created: 1529534189
+    eco: null
+    guid: a458cd7d-1312-4d72-a11a-11ef0619ba46
+    state: new
