--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529535209
+    eco: null
+    guid: f34801a3-04b1-4838-838d-438b651b1f75
+    state: running
+-   action_name: save
+    args: null
+    created: 1529535209
+    eco: null
+    guid: d9dfc7ab-889c-4364-9e31-2fef2ea4194d
+    state: new
