--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529536739
+    eco: null
+    guid: ce703e57-e027-4dbb-9db5-db25aa4415d3
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529536739
+    eco: null
+    guid: 3c36d6a5-7cb2-4642-9b77-309ce16f40ea
+    state: new
