--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529536739
+    eco: null
+    guid: 41642e21-99c2-4691-bd9a-b983c2e00207
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529536739
+    eco: null
+    guid: 7077bd42-7e6b-41e5-9ab5-1e0293403119
+    state: new
