--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529536739
+    eco: null
+    guid: e1f518d5-e9e5-43cb-8b3b-4af145cd990e
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529536739
+    eco: null
+    guid: f1c90e53-2c29-4f44-9a26-89b0d9f6d674
+    state: new
