--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,12 @@
 -   action_name: _monitor
     args: null
-    created: 1529537249
+    created: 1529537309
     eco: null
-    guid: 8a51aa6c-554a-4ec4-9e84-439f82ce2a94
+    guid: 273fcccf-5db5-462a-9e74-36c322d221bd
     state: running
+-   action_name: save
+    args: null
+    created: 1529537309
+    eco: null
+    guid: 1755533a-ddc5-402f-96e3-00777bb71bb5
+    state: new
