--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529537819
+    eco: null
+    guid: d002a313-1fdd-434f-a18f-842794e5c7df
+    state: running
+-   action_name: save
+    args: null
+    created: 1529537819
+    eco: null
+    guid: 61d60ef6-9e4d-409a-a50a-eaaddf7a0114
+    state: new
