--- a/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/node/local/f1a225a4-65a4-4675-afb4-97a22ff9d3b8/tasks.yaml
@@ -1,1 +1,6 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529538202
+    eco: null
+    guid: f7d14317-fad8-4ac7-a0b3-13d678e4c956
+    state: running
