--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot1/2889bc67-ec93-4c6c-bdd6-b4785d465859/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529538329
+    eco: null
+    guid: 423f8abe-8480-4ece-80f2-1bb25ff49cfe
+    state: running
+-   action_name: save
+    args: null
+    created: 1529538329
+    eco: null
+    guid: 62a31eec-abaa-4d1c-9155-885377a3cc6d
+    state: new
