--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529538899
+    eco: null
+    guid: f264d58a-6d44-44d1-a6e9-f3686d99a55f
+    state: running
+-   action_name: save
+    args: null
+    created: 1529538899
+    eco: null
+    guid: be2b4df6-a06f-4701-99ab-1a29ab055985
+    state: new
