--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529539469
+    eco: null
+    guid: e2fef5dc-2e32-4e1d-b9f4-92a0be02eed7
+    state: running
+-   action_name: save
+    args: null
+    created: 1529539469
+    eco: null
+    guid: 0c86f55d-9fe6-42c6-9a2c-55ce158fb50c
+    state: new
