--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529539979
+    eco: null
+    guid: df0014af-635f-41f7-ba6a-b96aa1844255
+    state: running
+-   action_name: save
+    args: null
+    created: 1529539979
+    eco: null
+    guid: d2413135-d0fe-4032-af15-410495c53b89
+    state: new
