--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529540549
+    eco: null
+    guid: 29e32466-1943-40dd-9731-e4bd6d3c676e
+    state: running
+-   action_name: save
+    args: null
+    created: 1529540549
+    eco: null
+    guid: 46d775a3-a418-4b7f-94c5-d6c8769a16e4
+    state: new
