--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,6 +1,6 @@
--   action_name: _monitor
+-   action_name: save
     args: null
-    created: 1529541119
+    created: 1529541189
     eco: null
-    guid: c99de97e-c4a8-48a2-bba2-5f43c9747337
+    guid: 19aec5ef-af37-4e97-be82-d1792e44358c
     state: running
