--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529541569
+    eco: null
+    guid: 7d21541e-c760-4cfd-99bc-4a4b5244ecc9
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529541569
+    eco: null
+    guid: dadf1bfc-f211-45cc-88b4-de8c19d17a35
+    state: new
