--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529543969
+    eco: null
+    guid: d6a96517-039f-477f-bce7-56af60bd4b0d
+    state: running
+-   action_name: save
+    args: null
+    created: 1529543969
+    eco: null
+    guid: 4798a06f-d7b8-49c0-bfc1-40429f2790e3
+    state: new
