--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529544599
+    eco: null
+    guid: 7c48248a-8cd7-4e0e-a25a-0346173ba13b
+    state: running
+-   action_name: save
+    args: null
+    created: 1529544599
+    eco: null
+    guid: 30f64e57-ad8f-4459-9f5d-99e9319dddc2
+    state: new
