--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: save
+    args: null
+    created: 1529545169
+    eco: null
+    guid: c76ed77d-faa7-46b5-aa93-513ea419b818
+    state: running
+-   action_name: _monitor
+    args: null
+    created: 1529545169
+    eco: null
+    guid: c949ff14-b47c-46d7-8295-25d19c9901b8
+    state: new
