--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot2/1583d9a9-3d15-4fa0-ad6c-1625310c9961/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529546999
+    eco: null
+    guid: c08f3fc6-f43f-4ccd-a6c2-80374d17c359
+    state: running
+-   action_name: save
+    args: null
+    created: 1529546999
+    eco: null
+    guid: db96b8bf-951a-4197-9a8d-4491941499d5
+    state: new
