--- a/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
+++ b/zrobot_data/github.com/zero-os/0-templates/zrobot/robot3/e32e2750-dfc4-4be8-a168-4a6c4fcad14c/tasks.yaml
@@ -1,1 +1,12 @@
-[]
+-   action_name: _monitor
+    args: null
+    created: 1529547569
+    eco: null
+    guid: ee0b01a3-adc5-4021-8a32-d5dfa4498984
+    state: running
+-   action_name: save
+    args: null
+    created: 1529547569
+    eco: null
+    guid: ea738550-7c24-4ef6-be65-39ea654bbcf5
+    state: new
